# PyVerse

./: CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yaml
docs/: core.md  utils.md
examples/: event_example.py  example.py  utils_example.py
native/: CMakeLists.txt  pyverse.cpp
pyverse/: __init__.py  pyverse.pyd
pyverse/Release/: pyverse.pyd
pyverse/utils/: __init__.py  color.py  platform.py  units.py
scripts/: download_sdl.py
src/: pyverse.cpp
src/PyVerse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cpp/: app.cpp  app.h  pyverse.cpp  window.cpp  window.h
src/prebuilt/: pyverse.cp313-win_amd64.pyd
src/pyverse/: __init__.py
src/pyverse/PyVerse.egg-info/: SOURCES.txt  top_level.txt
src/pyverse/core/: __init__.py  app.py  event.py  events.py  window.py
src/pyverse/utils/: __init__.py  layout.py
src/wrapper/: __init__.py  core.py
