[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PyVerse"
version = "0.1.0"
description = "A powerful Python framework for building modern desktop and mobile applications using web technologies. It allows developers to create rich user interfaces with HTML, CSS, and JavaScript while keeping the core logic in Python."
authors = [{name="Rustamov Humoyun Mirzo"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
dynamic = ["classifiers"]

[tool.setuptools.dynamic]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]