[build-system]
requires = [
    "setuptools>=65",
    "wheel",
    "pybind11",
    "cmake",
    "cibuildwheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "PyVerse"
version = "0.1.0"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyverse", "pyverse.*"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.cibuildwheel]
before-all = "python scripts/download_sdl.py"